--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "QAQYYC(Yechen Yu)"
+  name             : "QAQYYC"
   avatar           : "images/head.jpg"
   bio              : "Wuhan University of Technology"
   location         : "Earth"
